--- a/specification/relatorio-pds/-.tex
+++ b/specification/relatorio-pds/-.tex
@@ -423,7 +423,7 @@ Os \textbf{diagramas BPMN} (\textit{Business Process Model and Notation}) são u
 \end{figure}
 
 
-O diagrama BPMN apresentado representa o processo de negociação e compra de um produto entre dois utilizadores. O fluxo de atividades está dividido em duas \textit{pools} , correspondendo ao \textbf{Utilizador 1} e ao \textbf{Utilizador 2}, cada um desempenhando diferentes papéis dentro do processo.
+O diagrama BPMN apresentado representa o processo de negociação e compra de um produto entre dois utilizadores. O fluxo de atividades está dividido em duas piscinas, correspondendo ao \textbf{Utilizador 1} e ao \textbf{Utilizador 2}, cada um desempenhando diferentes papéis dentro do processo.
 
 O processo inicia-se quando o \textbf{Utilizador 1} demonstra \textbf{interesse por um produto}. A partir deste ponto, segue-se o seguinte fluxo:
 
@@ -456,7 +456,7 @@ O processo pode resultar em dois desfechos:
 	\label{fig:bpmn emprestimo/aluguer}
 \end{figure}
 
-O diagrama BPMN apresentado representa o processo de negociação de empréstimo/aluguer de um produto entre dois utilizadores. O fluxo de atividades está dividido em duas \textit{pools}, correspondendo ao \textbf{Utilizador 1} e ao \textbf{Utilizador 2}, cada um desempenhando diferentes papéis dentro do processo. O processo inicia-se quando o \textbf{Utilizador 1} demonstra \textbf{interesse por um produto}. A partir deste ponto, segue-se o seguinte fluxo:
+O diagrama BPMN apresentado representa o processo de negociação de empréstimo/aluguer de um produto entre dois utilizadores. O fluxo de atividades está dividido em duas piscinas, correspondendo ao \textbf{Utilizador 1} e ao \textbf{Utilizador 2}, cada um desempenhando diferentes papéis dentro do processo. O processo inicia-se quando o \textbf{Utilizador 1} demonstra \textbf{interesse por um produto}. A partir deste ponto, segue-se o seguinte fluxo:
 
 \begin{itemize}
 	\item O \textbf{Utilizador 1} realiza a \textbf{procura pelo produto} na aplicação.
@@ -488,7 +488,7 @@ Após a devolução do produto, o \textbf{Utilizador 2} confirma a sua receção
 	\label{fig:bpmn trocas}
 \end{figure}
 
-O diagrama BPMN apresentado descreve o processo de negociação e troca de produtos entre dois utilizadores. O fluxo está dividido em duas \textit{pools}, representando o \textbf{Utilizador 1} e o \textbf{Utilizador 2}, cada um com diferentes papéis no processo. O processo inicia-se quando o \textbf{Utilizador 1} demonstra \textbf{interesse por um produto}. O fluxo de atividades segue a seguinte sequência:
+O diagrama BPMN apresentado descreve o processo de negociação e troca de produtos entre dois utilizadores. O fluxo está dividido em duas piscinas, representando o \textbf{Utilizador 1} e o \textbf{Utilizador 2}, cada um com diferentes papéis no processo. O processo inicia-se quando o \textbf{Utilizador 1} demonstra \textbf{interesse por um produto}. O fluxo de atividades segue a seguinte sequência:
 
 \begin{itemize}
 	\item O \textbf{Utilizador 1} procura um produto e envia uma \textbf{proposta de troca} ao \textbf{Utilizador 2}.
@@ -585,7 +585,6 @@ O diagrama representa um sistema onde os utilizadores podem comprar, vender, alu
 	\begin{itemize}
 		\item \textbf{proposal\_types} (tipo de proposta).
 		\item \textbf{proposal\_statuses} (estado da proposta).
-        \item \textbf{proposal\_images} (imagens associadas às propostas).
 		\item Tipos específicos de propostas:
 		\begin{itemize}
 			\item \textbf{sale\_proposals} (inclui preço oferecido).
@@ -630,7 +629,7 @@ O diagrama representa um sistema onde os utilizadores podem comprar, vender, alu
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=\textwidth]{../images/entity-relationship-diagram.jpg}
+	\includegraphics[width=\textwidth]{../images/entity-relationship-diagram.png}
 	\caption{Diagrama ER}
 	\label{fig:diagrama_er}
 \end{figure}
