--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -746,9 +746,61 @@ Este processo assegura que o aluguer ocorre de forma controlada e registada, gar
 
 %------------------------------------------------
 \newpage
-\section*{Diagrama de Atividades}
+\section{Diagrama de Atividades}
 
-A plataforma pr
+	Os diagramas de atividade representam o fluxo de operações dentro de um sistema, destacando as ações realizadas e a interação entre os participantes. Eles são utilizados para modelar processos, ilustrando a sequência de atividades, decisões e possíveis caminhos alternativos. No contexto deste sistema, os diagramas de atividade descrevem os processos de vendas, aluguer e trocas, facilitando a compreensão do funcionamento e das etapas envolvidas.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{../images/activity-diagram-swaps.png}
+	\caption{Diagrama de atividades do Processo de Troca}
+	\label{fig:diagrama_atividades_troca}
+\end{figure}
+\newpage
+\subsection{Processo de Troca}
+O processo de troca inicia-se quando um cliente est\'a interessado num item e prop\~oe uma troca ao seu dono. O fluxo segue da seguinte forma:
+\begin{itemize}
+	\item O cliente envia uma proposta de troca ao dono do item.
+	\item O dono recebe a proposta e pode aceit\'a-la ou rejeit\'a-la.
+	\item Se o dono rejeitar a proposta, pode optar por encerrar o processo ou enviar uma contraproposta ao cliente.
+	\item Se o cliente aceitar a contraproposta, a troca \'e realizada.
+	\item Caso contr\'ario, o cliente pode decidir se deseja continuar a negociar ou encerrar o processo.
+\end{itemize}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{../images/activity-diagram-sales.png}
+	\caption{Diagrama de atividades do Processo de Vendas}
+	\label{fig:diagrama_atividades_vendas}
+\end{figure}
+
+\subsection{Processo de Venda}
+O processo de venda inicia-se quando um cliente est\'a interessado num item para compra. O fluxo segue da seguinte forma:
+\begin{itemize}
+	\item O cliente pode aceitar as condi\c{c}\~oes de venda ou optar por negociar.
+	\item Se desejar negociar, cria uma contraproposta e envia-a ao vendedor.
+	\item O vendedor avalia a contraproposta e pode aceit\'a-la, rejeit\'a-la ou criar uma nova contraproposta.
+	\item O processo repete-se at\'e que ambas as partes cheguem a um acordo ou decidam encerrar a negocia\c{c}\~ao.
+	\item Caso um acordo seja alcan\c{c}ado, a venda \'e conclu\'ida e o item \'e entregue ao cliente.
+\end{itemize}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{../images/activity-diagram-rentals.png}
+	\caption{Diagrama de atividades do Processo de Aluguer}
+	\label{fig:diagrama_atividades_aluguer}
+\end{figure}
+
+\subsection{Processo de Aluguer}
+O processo de aluguer ocorre quando um cliente deseja alugar um item por um determinado per\'iodo. O fluxo segue da seguinte forma:
+\begin{itemize}
+	\item O cliente verifica as condi\c{c}\~oes do aluguer e pode aceit\'a-las ou negociar.
+	\item Se desejar negociar, cria uma contraproposta e envia-a ao dono do item.
+	\item O dono do item recebe a proposta e pode aceit\'a-la ou rejeit\'a-la.
+	\item Caso rejeite, pode optar por encerrar o processo ou criar uma contraproposta.
+	\item O cliente decide se aceita ou continua a negociar.
+	\item Se as partes chegarem a um acordo, o aluguer \'e registado e ambas as partes s\~ao notificadas.
+\end{itemize}
 
 %------------------------------------------------
 \newpage
