--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -630,7 +630,7 @@ O diagrama representa um sistema onde os utilizadores podem comprar, vender, alu
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=\textwidth]{../images/entity-relationship-diagram.jpg}
+	\includegraphics[width=\textwidth]{../images/entity-relationship-diagram.png}
 	\caption{Diagrama ER}
 	\label{fig:diagrama_er}
 \end{figure}
