--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -746,8 +746,7 @@ Este processo assegura que o aluguer ocorre de forma controlada e registada, gar
 \newpage
 \section{Diagrama de Atividades}
 
-	Os diagramas de atividade representam o fluxo de operações dentro de um sistema, destacando as ações realizadas e a interação entre os participantes. Eles são utilizados para modelar processos, ilustrando a sequência de atividades, decisões e possíveis caminhos alternativos. No contexto deste sistema, os diagramas de atividade descrevem os processos de vendas, aluguer e trocas, facilitando a compreensão do funcionamento e das etapas envolvidas.
-
+Os diagramas de atividade representam o fluxo de operações dentro de um sistema, destacando as ações realizadas e a interação entre os participantes. Eles são utilizados para modelar processos, ilustrando a sequência de atividades, decisões e possíveis caminhos alternativos. No contexto deste sistema, os diagramas de atividade descrevem os processos de vendas, aluguer e trocas, facilitando a compreensão do funcionamento e das etapas envolvidas.
 
 \subsection{Processo de Troca}
 O processo de troca inicia-se quando um cliente está interessado num item e propõe uma troca ao seu dono. O fluxo segue da seguinte forma:
@@ -845,7 +844,7 @@ O processo de aluguer inicia-se quando um cliente está interessado em alugar um
 		\item Ambas as partes cheguem a um acordo, concluindo o aluguer.
 		\item Uma das partes decida encerrar a negociação.
 	\end{itemize}
-	\item Caso um acordo seja alcançado, o aluguer é registado e ambas as partes são notificadas.
+	\item Caso um acordo seja alcançado, o aluguer é registado no sistema.
 \end{itemize}
 
 \begin{figure}[ht]
@@ -859,12 +858,6 @@ O processo de aluguer inicia-se quando um cliente está interessado em alugar um
 \newpage
 \clearpage
 \section*{Design UI}
-
-A plataforma pr
-
-%------------------------------------------------
-\newpage
-\section*{Plano das Sprints para a Versão Alpha }
 
 A plataforma pr
 
