--- a/specification/relatorio-pds/essay.tex
+++ b/specification/relatorio-pds/essay.tex
@@ -106,6 +106,12 @@
 %----------------------------------------------------------------------------------------
 
 \newpage
+\renewcommand{\contentsname}{Indice}
+\tableofcontents
+\newpage
+\renewcommand{\listfigurename}{Lista de Figuras}
+\listoffigures
+\newpage
 \section{Introdução}
 
 A \textit{Vizzy} é uma plataforma comunitária desenvolvida para facilitar a compra, venda, troca e aluguer de itens entre pessoas da mesma comunidade, promovendo uma forma prática, económica e sustentável de partilhar recursos.
@@ -115,6 +121,22 @@ Através da \textit{Vizzy}, os utilizadores podem adquirir produtos em segunda m
 O objetivo da plataforma é criar uma rede de partilha dentro de uma comunidade, onde os membros possam beneficiar de um consumo mais consciente, poupando dinheiro e recursos, enquanto promovem a sustentabilidade e a cooperação.
 
 Neste relatório, serão apresentados os principais detalhes da aplicação, incluindo diagramas UML e \textit{mockups}, que ilustram as funcionalidades essenciais da \textit{Vizzy}.
+\subsection{Links Úteis}
+
+Os seguintes \textit{links} contêm informações relevantes sobre o projeto:
+
+\begin{itemize}
+	\item \textbf{Product Backlog}:
+	\begin{itemize}
+		\item [ ] \href{https://ipcapt-my.sharepoint.com/:x:/g/personal/nfr\_ipca\_pt/Eb29k3z-aWRGisXGIZopL6IBy5l5QZjY8SjG1iWQDl6c7w?rtime=jE\_b04Za3Ug}{\textbf{\textit{Excel}}}
+		\item [ ] \href{https://basigraphics.atlassian.net/jira/software/projects/VIZZY/boards/1/backlog?epics=visible&atlOrigin=eyJpIjoiOGNmZTQ2MDRmNjQ1NDY0NDgwNDk0MDJiMGM0MDdlZWYiLCJwIjoiaiJ9}{\textbf{\textit{Jira}}}
+	\end{itemize}
+	\item \textbf{Código-fonte}:
+	\begin{itemize}
+		\item [ ] \href{https://github.com/Basiiii/Vizzy}{\textbf{\textit{Repositório no GitHub}}}
+	\end{itemize}
+\end{itemize}
+
 
 \newpage
 \section{Problema e Motivação}
@@ -318,12 +340,6 @@ Esta arquitetura assegura um sistema robusto, seguro e otimizado, permitindo uma
 %------------------------------------------------
 \newpage
 \section{\textit{User Stories}}
-O \textit{Product Backlog} do projeto está definido e vai sendo atualizado através dos seguintes \textit{links}:
-\begin{itemize} 
-	\item\href{https://ipcapt-my.sharepoint.com/:x:/g/personal/nfr\_ipca\_pt/Eb29k3z-aWRGisXGIZopL6IBy5l5QZjY8SjG1iWQDl6c7w?rtime=jE\_b04Za3Ug}{\textbf{\textit{Excel}}}
-	\item\href{https://basigraphics.atlassian.net/jira/software/projects/VIZZY/boards/1/backlog?epics=visible&atlOrigin=eyJpIjoiOGNmZTQ2MDRmNjQ1NDY0NDgwNDk0MDJiMGM0MDdlZWYiLCJwIjoiaiJ9}{\textbf{\textit{Jira}}}
-	
-\end{itemize}
 
 \begin{table}[H]
 	\centering
